# moraine

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  autoresearch.sh  mkdocs.yml  zensical.toml
.claude-plugin/: marketplace.json
.githooks/: pre-commit
apps/cortex-ingest/: Cargo.toml
apps/cortex-ingest/src/: cli.rs
apps/cortex-mcp/: Cargo.toml
apps/cortex-mcp/src/: cli.rs
apps/cortex-monitor/: Cargo.toml
apps/cortex-monitor/src/: cli.rs
apps/cortexctl/: Cargo.toml
apps/cortexctl/src/: main.rs
apps/moraine/: Cargo.toml
apps/moraine-ingest/: Cargo.toml
apps/moraine-ingest/src/: cli.rs  main.rs
apps/moraine-mcp/: Cargo.toml
apps/moraine-mcp/src/: cli.rs  main.rs  rpc.rs  tokenize.rs
apps/moraine-mcp/src/format/: prose.rs
apps/moraine-mcp/src/sql/: builders.rs  logging.rs
apps/moraine-mcp/src/tools/: open.rs  search.rs
apps/moraine-monitor/: Cargo.toml
apps/moraine-monitor/src/: cli.rs  main.rs  server.rs  sql_safety.rs  static_assets.rs
apps/moraine-monitor/src/api/: analytics.rs  health.rs  status.rs  tables.rs  web_searches.rs
apps/moraine/src/: cli.rs  commands.rs  main.rs  managed_clickhouse.rs  paths.rs  process.rs  progress.rs  render.rs  service.rs
apps/moraine/src/commands/: analytics_schema_v1.golden.json  down.rs  export.rs  logs.rs  schema.rs  setup.rs  status.rs  up.rs
apps/moraine/src/commands/setup/: harnesses.rs  kiro-steering.md
apps/moraine/src/commands/setup/harnesses/: nac.rs
apps/moraine/tests/: clickhouse_supervision.rs  export_cli.rs  status_cli.rs
bindings/python/cortex_conversations/: Cargo.toml  README.md  pyproject.toml
bindings/python/cortex_conversations/python/cortex_conversations/: __init__.py
bindings/python/cortex_conversations/src/: lib.rs
bindings/python/cortex_conversations/tests/: test_smoke.py
bindings/python/moraine-cli/: README.md  pyproject.toml
bindings/python/moraine-cli/moraine_cli/: __init__.py  _version.py
bindings/python/moraine_conversations/: Cargo.toml  README.md  pyproject.toml
bindings/python/moraine_conversations/src/: lib.rs
bindings/python/moraine_conversations/tests/: test_smoke.py
config/: clickhouse.xml  cortex.toml  moraine.toml  users.xml
cortex-monitor/: README.md
crates/cortex-conversations/: Cargo.toml
crates/cortex-conversations/src/: clickhouse_repo.rs  lib.rs
crates/cortex-conversations/tests/: repository_integration.rs
crates/cortex-ingest-core/: Cargo.toml
crates/cortex-ingest-core/src/: dispatch.rs  lib.rs  model.rs  normalize.rs  sink.rs  watch.rs
crates/cortex-mcp-core/: Cargo.toml
crates/cortex-mcp-core/src/: lib.rs
crates/cortex-monitor-core/: Cargo.toml
crates/cortex-monitor-core/src/: lib.rs
crates/moraine-clickhouse/: Cargo.toml
crates/moraine-clickhouse/src/: envelope.rs  lib.rs  mcp_open_projection.rs  mcp_tool_names.rs
crates/moraine-conversations/: Cargo.toml
crates/moraine-conversations/benches/: analytics_latency.rs
crates/moraine-conversations/benches/analytics_latency/: support.rs
crates/moraine-conversations/src/: backend_router.rs  clickhouse_repo.rs  cursor.rs  domain.rs  error.rs  in_memory_repo.rs  lib.rs  repo.rs
crates/moraine-conversations/src/clickhouse_repo/: analytics.rs  cache.rs  consistency.rs  file_attention.rs  helpers.rs  list.rs  mcp_open_read.rs  mod.rs  open.rs  operations.rs  repo_impl.rs  rows.rs  scope.rs  search.rs  sql.rs  tests.rs
crates/moraine-conversations/tests/: analytics_benchmark.rs  analytics_benchmark_support.rs  live_clickhouse.rs  repository_integration.rs
crates/moraine-conversations/tests/live_clickhouse/: envelope_gates.rs  search_host_identity.rs  source_publication.rs  source_publication_migration.rs  source_publication_process.rs  support.rs
crates/moraine-conversations/tests/repository_integration/: analytics.rs  cache.rs  errors.rs  file_attention.rs  health.rs  heartbeat.rs  main.rs  search.rs  sessions.rs  tables.rs  test-name-map.json
crates/moraine-conversations/tests/repository_integration/support/: assertions.rs  mcp_open_fixtures.rs  mock_clickhouse.rs  mod.rs  responses.rs
crates/moraine-ingest-core/: Cargo.toml
crates/moraine-ingest-core/src/: checkpoint.rs  dispatch.rs  heartbeat.rs  lib.rs  model.rs  normalize.rs  publication.rs  publication_identity.rs  reconcile.rs  redaction.rs  sink.rs  sqlite_poll.rs  tee.rs  watch.rs
crates/moraine-ingest-core/src/sources/: antigravity.rs  claude_code.rs  codex.rs  cursor.rs  emitter.rs  grok.rs  hermes.rs  kimi_cli.rs  kiro_cli.rs  mod.rs  nac.rs  opencode.rs  pi.rs  qwen_code.rs  record_view.rs  shared.rs
crates/moraine-ingest-core/src/sqlite_poll/: nac.rs  opencode.rs
crates/moraine-ingest-core/src/sqlite_poll/opencode/: tests.rs
crates/moraine-ingest-core/tests/: golden_fixtures.rs  hermes_fixture.rs  hermes_session_fixture.rs  kimi_cli_fixture.rs  normalize_unit.rs  publication_checkpoint_contract.rs  qwen_code_fixture.rs
crates/moraine-ingest-core/tests/goldens/source_normalization/: antigravity.json  claude_code.json  codex.json  cursor.json  cursor_sqlite.json  grok.json  hermes_session_json.json  hermes_trajectory.json  kimi_cli.json  kimi_cli_subagent.json  kiro_cli.json  nac.json  opencode.json  pi_coding_agent.json  qwen_code.json
crates/moraine-mcp-core/: Cargo.toml
crates/moraine-mcp-core/src/: concurrency_tests.rs  contract.rs  file_attention_v1.rs  lib.rs  list_sessions_v1.rs  open_v1.rs  private_proxy.rs  search_sessions_v1.rs
crates/moraine-monitor-core/: Cargo.toml
crates/moraine-monitor-core/src/: lib.rs
docs/: README.md  configuration.md  export.md  full-config.toml  index.md  introduction.md  mcp-search-implementation-plan.md  mcp-search-interface-plan.md  mcp-search-interface-spec.md  monitor-http-api.md  quickstart.md  (+1 more)
moraine-monitor/backend/: Cargo.toml  README.md
moraine-monitor/backend/src/: clickhouse.rs  config.rs  main.rs
rust/codex-mcp/: Cargo.toml  README.md
rust/codex-mcp/src/: clickhouse.rs  config.rs  main.rs
rust/ingestor/: Cargo.toml  README.md
rust/ingestor/src/: clickhouse.rs  config.rs  ingestor.rs  main.rs
(+329 files in other folders)
