[workspace]
resolver = "2"
members = [
  "crates/moraine-config",
  "crates/moraine-clickhouse",
  "crates/moraine-conversations",
  "crates/moraine-ingest-core",
  "crates/moraine-mcp-core",
  "crates/moraine-monitor-core",
  "apps/moraine-ingest",
  "apps/moraine-mcp",
  "apps/moraine-monitor",
  "apps/moraine",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Moraine Maintainers"]
