[package]
name = "cortex-ingest"
version = "0.1.1"
edition = "2021"
description = "Cortex ingest service binary"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
cortex-config = { path = "../../crates/cortex-config" }
cortex-ingest-core = { path = "../../crates/cortex-ingest-core" }
