[package]
name = "cortex-mcp"
version = "0.1.1"
edition = "2021"
description = "Cortex MCP stdio server"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
cortex-config = { path = "../../crates/cortex-config" }
cortex-mcp-core = { path = "../../crates/cortex-mcp-core" }
