[package]
name = "cortex-monitor"
version = "0.1.1"
edition = "2021"
description = "Cortex monitor HTTP/UI service"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
cortex-config = { path = "../../crates/cortex-config" }
cortex-monitor-core = { path = "../../crates/cortex-monitor-core" }
