[package]
name = "cortexctl"
version = "0.1.1"
edition = "2021"
description = "Unified runtime control plane for Cortex services"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
cortex-config = { path = "../../crates/cortex-config" }
cortex-clickhouse = { path = "../../crates/cortex-clickhouse" }
