[package]
name = "moraine-ingest"
version = "0.2.1"
edition = "2021"
description = "Moraine ingest service binary"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
moraine-config = { path = "../../crates/moraine-config" }
moraine-ingest-core = { path = "../../crates/moraine-ingest-core" }
