[package]
name = "moraine-mcp"
version = "0.6.4"
edition = "2021"
description = "Moraine MCP stdio entry and unified backend daemon"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = [
    "rt",
    "rt-multi-thread",
    "io-std",
    "io-util",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
moraine-config = { path = "../../crates/moraine-config" }
moraine-conversations = { path = "../../crates/moraine-conversations" }
moraine-mcp-core = { path = "../../crates/moraine-mcp-core" }
moraine-monitor-core = { path = "../../crates/moraine-monitor-core" }
