[package]
name = "moraine"
version = "0.2.1"
edition = "2021"
description = "Unified runtime control plane for Moraine services"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.29", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
moraine-config = { path = "../../crates/moraine-config" }
moraine-clickhouse = { path = "../../crates/moraine-clickhouse" }
