[package]
name = "moraine"
version = "0.6.4"
edition = "2021"
description = "Unified runtime control plane for Moraine services"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "process", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false }
jsonc-parser = { version = "0.32", features = ["serde"] }
ratatui = { version = "0.29", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
toml_edit = "0.22"
uuid = { version = "1.11", features = ["v4"] }
moraine-config = { path = "../../crates/moraine-config" }
moraine-clickhouse = { path = "../../crates/moraine-clickhouse" }
