[package]
name = "cortex-conversations"
version = "0.1.1"
edition = "2021"
description = "High-level read/query APIs for Cortex conversations"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt", "sync"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
cortex-clickhouse = { path = "../cortex-clickhouse" }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net"] }
cortex-config = { path = "../cortex-config" }
