[package]
name = "cortex-ingest-core"
version = "0.1.1"
edition = "2021"
description = "Core ingestion pipeline internals for Cortex"

[dependencies]
anyhow = "1.0"
glob = "0.3"
notify = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.11"
urlencoding = "2.1"
walkdir = "2.5"
cortex-config = { path = "../cortex-config" }
cortex-clickhouse = { path = "../cortex-clickhouse" }
