[package]
name = "cortex-mcp-core"
version = "0.1.1"
edition = "2021"
description = "MCP protocol and tool routing core for Cortex"

[dependencies]
anyhow = "1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["io-std", "io-util", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
cortex-config = { path = "../cortex-config" }
cortex-clickhouse = { path = "../cortex-clickhouse" }
