[package]
name = "moraine-clickhouse"
version = "0.3.0"
edition = "2021"
description = "Shared Moraine ClickHouse client and query helpers"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
moraine-config = { path = "../moraine-config" }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net"] }
