[package]
name = "moraine-conversations"
version = "0.3.1"
edition = "2021"
description = "High-level read/query APIs for Moraine conversations"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt", "sync"] }
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }
moraine-clickhouse = { path = "../moraine-clickhouse" }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net"] }
moraine-config = { path = "../moraine-config" }
