[package]
name = "moraine-conversations"
version = "0.7.0"
edition = "2021"
description = "High-level read/query APIs for Moraine conversations"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt", "sync"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
moraine-clickhouse = { path = "../moraine-clickhouse" }
moraine-config = { path = "../moraine-config" }

[dev-dependencies]
axum = "0.7"
moraine-monitor-core = { path = "../moraine-monitor-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "time", "test-util"] }
