[package]
name = "moraine-ingest-core"
version = "0.6.2"
edition = "2021"
description = "Core ingestion pipeline internals for Moraine"

[dependencies]
anyhow = "1.0"
glob = "0.3"
notify = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.11"
urlencoding = "2.1"
walkdir = "2.5"
same-file = "1.0"
moraine-config = { path = "../moraine-config" }
moraine-clickhouse = { path = "../moraine-clickhouse" }
# rusqlite 0.40.x pulls libsqlite3-sys 0.38.x, whose build script currently
# uses unstable cfg_select! and fails on stable Rust. Stay on 0.39.x until the
# upstream stable build is fixed.
rusqlite = { version = "0.39.0", features = ["bundled"] }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["net"] }
