[package]
name = "moraine-mcp-core"
version = "0.6.4"
edition = "2021"
description = "MCP protocol and tool routing core for Moraine"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = [
    "io-std",
    "io-util",
    "net",
    "rt",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
moraine-config = { path = "../moraine-config" }
moraine-clickhouse = { path = "../moraine-clickhouse" }
moraine-conversations = { path = "../moraine-conversations" }

[dev-dependencies]
# `#[tokio::test]` needs the macros feature explicitly; without this it only
# compiles via feature unification from moraine-conversations' tokio features,
# which would break `cargo test -p moraine-mcp-core` if that crate ever
# dropped "macros".
tokio = { version = "1.40", features = ["macros"] }
