[package]
name = "moraine-monitor-core"
version = "0.7.0"
edition = "2021"
description = "Analytics and query logic for Moraine monitor service"

[dependencies]
anyhow = "1.0"
axum = "0.7"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "net"] }
moraine-config = { path = "../moraine-config" }
moraine-conversations = { path = "../moraine-conversations" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
