[package]
name = "codex-mcp"
version = "0.1.0"
edition = "2021"
description = "High-performance MCP search/open service for Moraine ClickHouse indexes"

[dependencies]
anyhow = "1.0"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
moraine-config = { path = "../../crates/moraine-config" }
moraine-clickhouse = { path = "../../crates/moraine-clickhouse" }
