[package]
name = "cortex-conversations-py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "cortex_conversations_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py39"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread"] }
cortex-config = { path = "../../../crates/cortex-config" }
cortex-clickhouse = { path = "../../../crates/cortex-clickhouse" }
cortex-conversations = { path = "../../../crates/cortex-conversations" }

[workspace]
