[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "moraine-conversations"
version = "0.1.0"
description = "Python bindings for Moraine conversation read/search APIs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.maturin]
module-name = "moraine_conversations._core"
python-source = "python"
features = ["pyo3/extension-module"]
